# selenium-youtube-scraper

./: .replit  README.md  pyproject.toml  scraper.py  scratch.py  trending.csv  trending.html
