[tool.poetry]
name = "repl_python3_selenium-youtube-scraper-2"
version = "0.1.0"
description = ""
authors = ["vijay98-ops <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.1.2"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
